react table commit

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@mui/x-date-pickers": "^8.18.0",
     "@reduxjs/toolkit": "^2.10.1",
     "@tanstack/react-table": "^8.21.3",
+    "dayjs": "^1.11.19",
     "dompurify": "^3.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
