--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@mui/x-date-pickers": "^8.18.0",
     "@reduxjs/toolkit": "^2.10.1",
     "@tanstack/react-table": "^8.21.3",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
     "dompurify": "^3.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
